For the latest news, visit the SparForte web site.

Objective:

CHANGES SINCE 2.4

1. New: doubly_linked_lists.parcel.

2. Fix: fixed "positive value is less than zero" error for a zero.

3. New: renaming a generic type.
