@@ -19,11 +19,7 @@ Priority Issues (Fix These First)
 - can I address dash shell compatibility?
 - why are in out parameters not references? e.g. in mysqlm and dbm, should
   arrays of database connections be possible?
-- missing a case "when" keyword can cause string exception
 - updating adascript shell commands to correspond with bourne shell changes
-- renamings on expansions
-- "literal" & custom-string is an error, but custom-string & "literal" is
-  not?  Check this.  Encountered with imported shell variable.
 - completions
   - a single matching directory lacks a trailing / - perhaps a GNU readline config issue
   - drill-down on empty directories probably not working
@@ -39,8 +35,6 @@ Priority Issues (Fix These First)
       - postgresql is more complicated
         - has "SIMILAR TO" (regex)
         - has ~ regex operators
-- Verify: generic/parameterized types
-  - is copying done for in mode parameters
 - Fix: testing validator project I noticed
   - under some conditions, the breakout prompt my have end-of-file and be
     interpreted as a return to resume execution.  I have not identified what
